<resources>
    <string name="app_name">stuehmer-reflex</string>
    <string name="action_settings">Settings</string>
    <string name="single_user">Single User Mode</string>
    <string name="gameshow_buzzer">Gameshow Buzzer Mode</string>
    <string name="statistics">Reaction Time Statistics</string>
    <string name="title_activity_gameshow_buzzer">GameshowBuzzerActivity</string>
    <string name="reaction_timer">Reaction Timer</string>
    <string name="description">Click Begin when you are ready. The timer waits between 10ms and 2000ms before prompting you
        to click. When the wait is over you will be told to click. Your reaction time will
        then be recorded and displayed.</string>
    <string name="begin">Begin</string>
    <string name="click">Click!</string>
    <string name="previously_started"></string>
    <string name="too_soon">Too Soon</string>
    <string name="wait_message">Wait until the button says to click.</string>
    <string name="play_again">Click OK to play again.</string>
    <string name="buzzer_counts">Buzzer Counts</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="title_activity_buzzer_counts">BuzzerCountsActivity</string>
    <string name="title_activity_players_select">PlayersSelectActivity</string>
    <string name="two_players">2 Players</string>
    <string name="three_players">3 Players</string>
    <string name="four_players">4 Players</string>
    <string name="player_one">Player 1</string>
    <string name="player_two">Player 2</string>
    <string name="player_three">Player 3</string>
    <string name="player_four">Player 4</string>
    <string name="title_activity_three_game_show_buzzer">ThreeGameShowBuzzerActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_four_gameshow_buzzer">FourGameshowBuzzerActivity</string>
</resources>
