<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="4"
    tools:context=".MainScreenActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:text="@string/single_user"
        android:id="@+id/single_user_select"
        android:onClick="startSingleUser" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:text="@string/gameshow_buzzer"
        android:id="@+id/gameshow_buzzer_select"
        android:onClick="startGameshowBuzzer" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:text="@string/statistics"
        android:id="@+id/statistics_select"
        android:onClick="startStatistics" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:text="@string/buzzer_counts"
        android:id="@+id/buzzer_counts_select"
        android:onClick="startBuzzerCounts" />
</LinearLayout>
