<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="3"
    tools:context="com.example.stuehmer.stuehmer_reflex.PlayersSelectActivity" >

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="30sp"
        android:text="@string/two_players"
        android:id="@+id/two_player_counts"
        android:onClick="showTwoPlayer" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="30sp"
        android:text="@string/three_players"
        android:id="@+id/three_player_counts"
        android:onClick="showThreePlayer" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="30sp"
        android:text="@string/four_players"
        android:id="@+id/four_player_counts"
        android:onClick="showFourPlayer"/>

</LinearLayout>